# ClientServerFileSender

./: .gitignore  CMakeLists.txt  README.md  client.cpp  client.h  client_main.cpp  client_old.cpp  exceptions.h  helpers.cpp  helpers.h  io_context_pool.cpp  server.cpp  server.h  server_main.cpp  session.cpp  session.h  todo
client/: client.cpp  client.h
server/: io_context_pool.cpp  io_context_pool.h  server.cpp  session.cpp  session.h
